--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/shared.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/shared.css" />
 
-    <link href="/styles/dailyChallenge.css" rel="stylesheet" />
+    <link href="styles/dailyChallenge.css" rel="stylesheet" />
 
     <title>My daily challenge</title>
   </head>
@@ -26,7 +26,7 @@
     <footer>
       <p>
         Explore the
-        <a href="/full-week/full-week.html">full week.</a>
+        <a href="full-week/full-week.html">full week.</a>
       </p>
     </footer>
   </body>
