--- a/full-week/full-week.html
+++ b/full-week/full-week.html
@@ -8,17 +8,18 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/full-week.css" />
+
+    <link rel="stylesheet" type="text/css" href="../styles/shared.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/full-week.css" />
     <title>My Upcoming Challenges</title>
   </head>
   <body>
     <header>
       <h1>My Upcoming Challenges</h1>
       <p id="description">These are my goals for the next days.</p>
-      <a href="index.html">View Today's Challenge</a>
+      <a href="../index.html">View Today's Challenge</a>
     </header>
     <main>
       <ol>
